mode: fixed alignment for mobile & tablet;

--- a/src/scss/blocks/mode.scss
+++ b/src/scss/blocks/mode.scss
@@ -57,7 +57,7 @@
   .mode {
     margin-top: 0;
     margin-left: auto;
-    margin-right: 50px;
+    margin-right: 12vw;
   }
 
   .mode__state {
